--- a/style/main.css
+++ b/style/main.css
@@ -8,7 +8,7 @@ html, body {
   font-size: 18px; }
 
 body {
-  margin: 80px 0; }
+  margin: 20px 0; }
 
 .heading:after {
   content: "";
@@ -16,7 +16,7 @@ body {
   clear: both; }
 
 h1.title {
-  font-size: 60px;
+  font-size: 80px;
   font-weight: bold;
   margin: 0;
   display: block;
@@ -119,7 +119,7 @@ hr {
   margin-bottom: 30px; }
 
 .container {
-  width: 500px;
+  width: 625px;
   margin: 0 auto; }
 
 @-webkit-keyframes fade-in {
@@ -141,6 +141,7 @@ hr {
   100% {
     opacity: 1; } }
 .game-container {
+  margin: auto;
   margin-top: 40px;
   position: relative;
   padding: 15px;
@@ -205,6 +206,8 @@ hr {
       display: block; }
 
 .grid-container {
+  background-position: center;
+  background-size: cover;
   position: absolute;
   z-index: 1; }
 
@@ -524,6 +527,12 @@ hr {
   text-align: center;
   float: right; }
 
+.undo-button {
+  margin-right: 5px;
+}
+.disabled {
+  background: #bbada0; }
+
 .game-explanation {
   margin-top: 50px; }
 
@@ -629,6 +638,8 @@ hr {
         display: block; }
 
   .grid-container {
+    background-position: center;
+    background-size: cover;
     position: absolute;
     z-index: 1; }
 
